syntax = "proto3";

option csharp_namespace = "Api.Protos";

package tasks;

import "google/api/annotations.proto";
import "Protos/subjects.proto";

service Task {
  rpc AssignTask (AssignTaskRequest) returns (.subjects.LecturerSubjectResponse) {
    option (google.api.http) = {
      post: "/api/tasks",
      body: "*"
    };
  };

  rpc RemoveTask (RemoveTaskRequest) returns (.subjects.LecturerSubjectResponse) {
    option (google.api.http) = {
      delete: "/api/tasks/{task_id}",
    };
  };

  rpc GetLecturerTaskDetails(GetLecturerTaskDetailsRequest) returns (.subjects.LecturerTaskResponse) {
    option (google.api.http) = {
      get: "/api/tasks/lecturer/{task_id}",
    };
  };

  rpc GetStudentTaskDetails(GetStudentTaskDetailsRequest) returns (.subjects.StudentTaskResponse) {
    option (google.api.http) = {
      get: "/api/tasks/student/{task_id}",
    };
  };

  rpc RemoveTaskSolution (RemoveTaskSolutionRequest) returns (.subjects.StudentTaskResponse) {
    option (google.api.http) = {
      delete: "/api/tasks/{student_task_id}/remove",
    };
  };

  rpc ReturnTask (ReturnTaskRequest) returns (.subjects.LecturerTaskResponse) {
    option (google.api.http) = {
      put: "/api/tasks/{student_task_id}/return",
    };
  };

  rpc AcceptTask (AcceptTaskRequest) returns (.subjects.LecturerTaskResponse) {
    option (google.api.http) = {
      put: "/api/tasks/{student_task_id}/accept",
    };
  };

  rpc RejectTask (RejectTaskRequest) returns (.subjects.LecturerTaskResponse) {
    option (google.api.http) = {
      put: "/api/tasks/{student_task_id}/reject",
    };
  };

  rpc CommentTask (CommentTaskRequest) returns (.subjects.UploadedTaskResponse) {
    option (google.api.http) = {
      post: "/api/tasks/{student_task_id}/comment",
      body: "*"
    };
  }
}

message AssignTaskRequest {
  string title = 1;
  string description = 2;
  string subject_id = 3;
  string deadline = 4;
  int32 max_grade = 5;
}

message RemoveTaskRequest {
  string task_id = 1;
}

message RemoveTaskSolutionRequest {
  string student_task_id = 1;
}

message GetLecturerTaskDetailsRequest {
  string task_id = 1;
}

message GetStudentTaskDetailsRequest {
  string task_id = 1;
}

message DownloadTaskSolutionRequest{
  string student_task_id = 1;
}

message CommentTaskRequest {
  string student_task_id = 1;
  string comment = 2;
}

message AcceptTaskRequest {
  string student_task_id = 1;
  int32 grade = 2;
}

message RejectTaskRequest {
  string student_task_id = 1;
}

message ReturnTaskRequest {
  string student_task_id = 1;
}

message StudentTasksResponse {
  string student_id = 1;
  string full_name = 2;
  int32 total_grade = 3;
  double average_grade = 4;
  repeated .subjects.StudentTaskResponse tasks = 5;
}